# control-plane

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  bootstrap_control_plane.sql  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 000000000001_control_plane_init.py  000000000002_seed_event_types.py  000000000003_status_changed_trigger.py  000000000004_enable_pg_trgm_citext.py
app/: db.py  main.py  settings.py
app/models/: control_plane.py
app/routers/: tenants.py
app/schemas/: control_plane.py
app/secrets/: manager.py
docs/adr/: ADR-CP-001.md  ADR-CP-002.md
