[project]
name = "control-plane"
version = "0.1.0"
description = "Control plane multitenant"
requires-python = ">=3.12,<3.13"

dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "asyncpg>=0.29.0,<0.30.0",
  "pydantic>=2.0.0,<3.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "email-validator>=2.0.0,<3.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<0.24.0",
  "httpx>=0.27.0,<0.28.0",
  "ruff>=0.6.0,<0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"